<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <ImageView 
        android:id="@+id/more_logo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/guanyu_bg"
        android:layout_marginTop="45dp"
        />
    <TextView 
        android:id="@+id/more_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="left"
        android:text="@string/more_text"
        android:layout_marginTop="40dp"
        android:autoLink="email"
        
        />
    <TextView 
        android:id="@+id/more_phone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="left"
        android:text="@string/more_phone"
        
        android:autoLink="phone"
        
        />
    <TextView 
        android:id="@+id/more_xinxi"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="left"
        android:text="@string/more_xinxi"
        android:layout_marginTop="10dp"
        
        />

    <TextView
        android:id="@+id/more_copyright"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/more_copyright" />
    
    <Button 
        android:id="@+id/updatecheck_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/more_updatecheck"
        
        />
    
    

</LinearLayout>